# TaskManager

./: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 039c4c0afa92_first_migrations.py  be9f42a824cf_create_users_table.py
task_manager/: database.py  main.py  settings.py
task_manager/core/: dependencies.py  models.py  routers.py  utils.py
task_manager/core/abc/: interactor.py  repository.py
task_manager/core/application/: depends.py  interactor.py  repository.py
task_manager/core/tests/: conftest.py
task_manager/tasks/: models.py  routers.py  schemas.py
task_manager/tasks/abc/: controller.py  interactor.py  repository.py
task_manager/tasks/application/: controller.py  depends.py  interactor.py  repository.py
task_manager/tasks/tests/: conftest.py  test_controllers.py  test_routes.py
task_manager/tests/: database.py
task_manager/users/: crud.py  dependencies.py  exceptions.py  models.py  routers.py  schemas.py  utils.py
task_manager/users/application/: depends.py  interactor.py  repository.py
task_manager/utils/mixins/: controllers.py  crud.py  interactors.py  repository.py
task_manager/utils/mixins_abc/: controllers.py  interactors.py  repositories.py
