[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = ""
authors = ["Халатян Мери <m.halatyan@agora.ru>"]
packages = [{ include = "task_manager" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
sqlalchemy = "^2.0.41"
alembic = "^1.16.4"
uvicorn = { extras = ["standard"], version = "^0.29" }
asyncpg = "^0.29"
pydantic = { extras = ["email"], version = "^2.11.7" }
greenlet = "^3.2.3"
passlib = "^1.7.4"
bcrypt = "^4.3.0"
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"
pylint = "^3.3.7"
pytest-asyncio = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-mock = "^3.14.1"
pytest-factoryboy = "^2.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
